# talos

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/: dependabot.yml  versioning.md
.github/scripts/: bump_version.py  changelog_release.py
.github/workflows/: docs.yml  version-bump.yml
docs/: book.toml
docs/src/: SUMMARY.md  getting-started.md  introduction.md
docs/src/architecture/: agent-client-model.md  overview.md  protocol.md  transports.md
docs/src/configuration/: agent-config.md
docs/src/contributing/: development.md  documentation.md
docs/src/design-history/: index.md  initial-system-design.md  quic-transport.md
docs/src/features/: joint-control.md  logs.md  node-introspection.md  topic-observation.md
docs/src/future/: open-questions.md  roadmap.md
docs/src/usage/: agent.md  cli.md  tui.md
openspec/changes/archive/2026-04-02-talos-system/: design.md  proposal.md
openspec/changes/archive/2026-04-10-quic-transport/: proposal.md  tasks.md
openspec/changes/archive/2026-04-10-quic-transport/specs/cli-interface/: spec.md
openspec/changes/archive/2026-04-10-quic-transport/specs/ipc-protocol/: spec.md
openspec/changes/quic-transport/: design.md  tasks.md
openspec/changes/quic-transport/specs/quic-transport/: spec.md
openspec/changes/quic-transport/specs/ros2-bridge/: spec.md
openspec/changes/quic-transport/specs/terminal-ui/: spec.md
openspec/changes/talos-system/: tasks.md
openspec/changes/talos-system/specs/cli-interface/: spec.md
openspec/specs/cli-interface/: spec.md
openspec/specs/ipc-protocol/: spec.md
openspec/specs/joint-control/: spec.md
openspec/specs/protocol-session/: spec.md
openspec/specs/ros2-bridge/: spec.md
openspec/specs/terminal-ui/: spec.md
rclrs_ws/: .gitignore  README.md  pixi.toml
rclrs_ws/scripts/: ros2pixi.sh
talos-agent/: Cargo.toml
talos-agent/src/: bridge.rs  conversions.rs  lib.rs  main.rs  router.rs  server.rs
talos-agent/tests/: integration.rs
talos-cli/: Cargo.toml
talos-cli/src/: main.rs
talos-common/: Cargo.toml
talos-common/src/: config.rs  config_tests.rs  error.rs  lib.rs  urdf.rs  urdf_tests.rs
talos-common/src/protocol/: codec.rs  messages.rs  mod.rs  tests.rs  types.rs
talos-common/src/session/: mod.rs  quic.rs  server.rs  uds.rs
talos-common/src/transport/: certs.rs  mod.rs  quic.rs  uds.rs
talos-common/tests/: quic_transport.rs  transport_uds.rs
talos-tui/: Cargo.toml
talos-tui/src/: client.rs  main.rs  state.rs  ui.rs
talos-tui/src/ui/: help.rs  joints_tab.rs  log_tab.rs  nodes_tab.rs  topics_tab.rs
