[package]
name = "talos-agent"
description = "ROS 2 bridge agent for Talos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
talos-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
