[package]
name = "talos-agent"
description = "ROS 2 bridge agent for Talos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
quic = ["talos-common/quic", "dep:quinn"]

[dependencies]
talos-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
futures-util = { version = "0.3", features = ["sink"] }
rclrs = "0.7"
rosidl_runtime_rs = "0.6"
nav_msgs = "*"
geometry_msgs = "*"
std_msgs = "*"
sensor_msgs = "*"
rcl_interfaces = "*"
builtin_interfaces = "*"

# Only needed when quic feature is enabled (for type references in server.rs)
quinn = { version = "0.11", optional = true }

[dev-dependencies]
tempfile = "3"
