[package]
name = "talos-cli"
description = "Command-line interface for Talos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
talos-common = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
