[package]
name = "talos-cli"
description = "Command-line interface for Talos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
quic = ["talos-common/quic"]

[dependencies]
talos-common = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { version = "0.3", features = ["sink"] }
