[package]
name = "talos-common"
description = "Shared protocol, transport, and config for Talos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
urdf-rs = "0.9"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
futures-util = { version = "0.3", features = ["sink"] }
tempfile = "3"
