[package]
name = "talos-common"
description = "Shared protocol, transport, and config for Talos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
quic = ["dep:quinn", "dep:rustls", "dep:rcgen"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
urdf-rs = "0.9"
futures-util = { version = "0.3", features = ["sink"] }

# QUIC transport (optional)
quinn = { version = "0.11", optional = true, features = ["rustls"] }
rustls = { version = "0.23", optional = true, features = ["ring"] }
rcgen = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
futures-util = { version = "0.3", features = ["sink"] }
tempfile = "3"
